Add tests for GameService and fix first issues